--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -742,7 +742,7 @@ In this section, we show how to determine the performance (the computational com
 \end{enumerate}
 
 \subsection{Semantics}
-\tb{Erman, can you please verify this sub chapter? Does this make sense?}
+\tb{ToDo for Erman: please insert your ideas...}
 The distinction of constraint types regarding the dependency on CWA and UNA is an important aspect when combining reasoning with validation,
 as OWL reasoning requires {\em OWA} and {\em nUNA} and RDF validation is based on {\em UNA} (different names represent different objects) and
 {\em CWA} (a statement is inferred to be false if it cannot be proved to be true).
@@ -1566,9 +1566,7 @@ by reducing the validation of integrity constraints to SPARQL query answering by
 This OWL semantics, however, was never submitted to a standards organization such as the W3C.
 
 In description logics, reasoning tasks like query answering or detection of inconsistencies require the consideration of knowledge that is not only defined explicitly but also implicitly. To do so there are two different ways called forward- and backward-chaining. The first implies a materialized knowledge base, where the original knowledge base is extended by all assertions that can be inferred. State-of-the-art DL or OWL reasoners that following this approach are e.g. FaCT++ \cite{tsarkov2006fact++}, Pellet \cite{sirin2007pellet},  RacerPro \cite{haarslev2001racer}, or HermiT \cite{horrocks2012hermit}. On the second approach, the original knowledge base is kept in its original state and before queries are evaluated against the knowledge base, the queries will be rewritten such that its rewritings will consider also the implicit knowledge in the returned result set. Approaches following this way are e.g., \textsf{PerfectRef} given by Calvanese et al. \cite{Calvanese2007} or \textsf{TreeWitness} proposed by Kontchakov et al. \cite{kontchakov2011combined}. The choice between these two different ways depends on the specific application case. So the first kind is probably applied on local knowledge bases whereas the second is more appropriated for federative environments like in \cite{nolle2014efficient,nolle2013elite}.
-
 \tb{2 papers, see following latex comments}
-
 %Axel Polleres, Cristina Feier, and Andreas Harth. Rules with
 %contextually scoped negation. In Proceedings of the 3rd European
 %Semantic Web Conference (ESWC2006), volume 4011 of Lecture Notes in
@@ -1579,10 +1577,6 @@ In description logics, reasoning tasks like query answering or detection of inco
 %http://www2.informatik.uni-freiburg.de/~mschmidt/docs/sparql_constraints.pdf
 
 \section{Conclusion and Future Work}
-
-\tb{1/2 sentences how reasoning is implemented in the validator}
-
-\tb{Andy: 1 sentence about query expansion}
 
 In section \ref{Expressivity-Complexity-OWL2} we explained why reasoning is beneficial for validation and how reasoning interacts with validation.
 In section \ref{Classification-RDF-Constraints-Reasoning-Complexity} we classified RDF constraints according to reasoning and complexity.
@@ -1597,8 +1591,9 @@ In sections
 \ref{RDF-Validation-Requirements-without-Reasoning},
 we present some constraints for each of the two constraint types $\mathcal{C}_{R}$ and $\overline{\mathcal{C}_{R}}$.
 For $\mathcal{C}_{R}$ constraints we consider the effects of reasoning on validation.
-We fully implemented the validation of all DSP, OWL 2 QL, and OWL 2 DL constructs
-within our validation environment (\url{http://purl.org/net/RDFval-demo}) (see section \ref{Implementation}).
+We implemented the validation of all OWL 2 QL, OWL 2 DL, DSP (and the major ReSh and ShEx) constructs
+within our SPIN validation environment in form of SPARQL CONSTRUCT queries (\url{http://purl.org/net/RDFval-demo}).
+%\cite{BoschEckert2014-2}\footnote{SPIN mappings: \url{https://github.com/boschthomas/OWL2-SPIN-Mapping}, \url{https://github.com/dcmi/DSP-SPIN-Mapping}}.
 
 As part of future work we extend the validator to provide a list of constraint languages for which the expressivity is enough to express selected constraints.
 The validator may also recommend one of these constraint languages having the highest expressivity and lowest complexity.
